--- a/src/styles/todoStyle.scss
+++ b/src/styles/todoStyle.scss
@@ -2,18 +2,32 @@
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    border: 20px solid grey;
-    width: 70%;
-    margin: auto;
+    width: 50%;
+    height: min-content;
 }
 
+.linethrought {
+    width: 100%;
+    background-color: #c7c7c7;
+    height: 2px;
+    position: relative;
+    top: 20px;
+    z-index: -1;
+}
+
+.title {
+    background-color: white;
+    width: max-content + 100px;
+    margin: 0 auto;
+    padding: 0 5px;
+}
 
 .todo-form {
+    margin: 2rem 0;
     .err {
         color: red;
     }
     input {
-        border-color: #a824a8;
         border-radius: 10px;
         margin: 0px 10px;
         padding: 10px;
@@ -33,9 +47,15 @@ hr {
 
 .todo-item {
     display: flex;
-    margin: 15px 0px;
+    margin: 25px auto;
+    flex-wrap: wrap;
+    width: 100%;
+    .checkbox {
+        width: 1.2rem;
+        height: 1.2rem;
+    }
     .todo-text {
-        width: 10%;
+        width: max-content ;
         margin: 0 auto;
         text-align: start;
     }
@@ -44,9 +64,11 @@ hr {
         color: burlywood;
     }
     .buttons-container {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
         button {
             margin: 0 10px;
         }
     }
 }
-
