--- a/src/styles/todoStyle.scss
+++ b/src/styles/todoStyle.scss
@@ -33,7 +33,13 @@
         margin: 0px 10px;
         padding: 10px;
         border-width: 2.5px;
+        &:focus {
+            outline: goldenrod;
+            border-color: goldenrod;
+        }
     }
+
+    
     button {
         cursor: pointer;
         padding: 10px 25px;
@@ -85,7 +91,7 @@ hr {
         margin: 0 auto;
         text-align: start;
         font-weight: 600;
-        font-size: 1.2rem;
+        font-size: 1.15rem;
     }
     .complete {
         text-decoration: line-through;
@@ -98,11 +104,15 @@ hr {
         .action-icon {
             cursor: pointer;
             margin: 0 20px;
+            font-size: 1.1rem;
             color: gray;
             transition: color .2s ease;
-            &:hover {
-                color: goldenrod;
-            }
+        }
+        .trash-icon:hover {
+            color: red;
+        }
+        .edit-icon:hover {
+            color: #5388b4;
         }
         .action-divider {
             width: 2px;
