some bugs fixed and style added

--- a/src/styles/todoStyle.scss
+++ b/src/styles/todoStyle.scss
@@ -87,6 +87,7 @@ hr {
         cursor: pointer;
     }
     .todo-text {
+        cursor: pointer;
         width: max-content;
         margin: 0 auto;
         text-align: start;
