--- a/src/styles/todoStyle.scss
+++ b/src/styles/todoStyle.scss
@@ -17,13 +17,12 @@
 
 .title {
     background-color: white;
-    width: max-content + 100px;
     margin: 0 auto;
     padding: 0 5px;
 }
 
 .todo-form {
-    margin: 2rem 0;
+    margin: 1.4rem 0;
     .err {
         color: red;
     }
@@ -38,8 +37,6 @@
             border-color: goldenrod;
         }
     }
-
-    
     button {
         cursor: pointer;
         padding: 10px 25px;
@@ -121,4 +118,8 @@ hr {
             background-color: goldenrod;
         }
     }
+}
+
+.select {
+    margin-top: 1rem;
 }
