--- a/src/styles/todoStyle.scss
+++ b/src/styles/todoStyle.scss
@@ -87,9 +87,10 @@ hr {
         cursor: pointer;
         width: max-content;
         margin: 0 auto;
-        text-align: start;
+        text-align: justify;
         font-weight: 600;
-        font-size: 1.15rem;
+        font-size: 1.1rem;
+        max-width: 70%;
     }
     .complete {
         text-decoration: line-through;
